--- a/cdk-base-template/.gitignore
+++ b/cdk-base-template/.gitignore
@@ -6,3 +6,7 @@ node_modules
 # CDK asset staging directory
 .cdk.staging
 cdk.out
+
+# Config
+lib/config/CdkConfig**
+!lib/config/CdkConfig-example.ts
