--- a/cdk-base-template/package.json
+++ b/cdk-base-template/package.json
@@ -1,18 +1,18 @@
 {
   "name": "cdk-base-template",
   "version": "0.1.0",
+  "description": "AWS CDK typescript-multi-env template",
   "bin": {
     "cdk-base-template": "bin/cdk-base-template.js"
   },
   "scripts": {
-    "build": "tsc",
-    "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk:dev": "AWS_PROFILE=cdk CDK_ENV=dev cdk",
+    "deploy:dev": "AWS_PROFILE=cdk CDK_ENV=dev cdk deploy"
   },
   "devDependencies": {
     "@types/jest": "^29.2.4",
-    "@types/node": "18.11.15",
+    "@types/node": "^14.14.25",
     "jest": "^29.3.1",
     "ts-jest": "^29.0.3",
     "aws-cdk": "2.59.0",
@@ -23,5 +23,7 @@
     "aws-cdk-lib": "2.59.0",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
-  }
+  },
+  "author": "Ravi",
+  "license": "MIT"
 }
